--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Qiqa Tasks</title>
+    <title>Social Media</title>
 
     <style>
       *{
@@ -55,16 +55,7 @@
 
     <script>
       // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyAMrpDyNKZGKEUJ8Qv-KUvpzxcSxV4bQ8M",
-        authDomain: "qigatask.firebaseapp.com",
-        projectId: "qigatask",
-        storageBucket: "qigatask.appspot.com",
-        messagingSenderId: "525216602524",
-        appId: "1:525216602524:web:c75c2e1d9d994f54949059"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
+     
     </script>
   </body>
 </html>
